# legalnexus-backend

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCUMENTATION_SUMMARY.md  Dockerfile  HYBRID_SEARCH_README.md  INVESTOR_PROJECT_DESCRIPTION.md  LICENSE  METHODOLOGY_DOCUMENTATION.md  Makefile  PITCH_DOCUMENT.md  PITCH_SUMMARY.md  README.md  SECURITY.md  SYSTEM_RESOURCE_SUMMARY.md  VALIDATION_REPORT.md  analyze_metadata.py  app.py  architecture_diagram.tex  architecture_diagram_complex.py  argument_chain_traversal.py  case_embeddings_gemini.pkl  cd_evidence_case.json  collegereport.aux  collegereport.tex.backup  collegereport_part2.tex  compile_with_docker.sh  configure_neo4j.py  counterfactual_engine.py  create_synthetic_graph.py  data_loader.py  demo_hgcn_search.py  docker-compose.yml  evaluate_hgcn_model.py  fix_metadata_placeholder.py  generate_algorithm_diagrams.py  (+55 more)
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
config/: .env.example  SETUP_SUMMARY.txt  requirements.txt
data/: citation_network.pkl  readme.md
docs/: APP_USER_GUIDE.md  BUSINESS_MODEL_SUMMARY.md  COMPLETE_DOCUMENTATION_SUMMARY.md  GNN_ARCHITECTURE_EXPLAINED.md  GNN_INTEGRATION_MERMAID.md  HGCN_TESTING_GUIDE.md  HGCN_UI_QUICKSTART.md  JINA_UI_GUIDE.md  LATEX_SETUP_INSTRUCTIONS.md  MARKET_RESEARCH_QUESTIONS.md  NOVEL_ALGORITHMS_README.md  PROBLEM_SOLUTION_VISUAL.md  QUICK_START_GUIDE.md  RELATED_WORK_COMPARISON.md  SUMMARY.md  VALIDATION_REPORT.md  VERIFICATION_REPORT.md  presentation_slides.md  presentation_slides_content.md
experiments/: hyperbolic_vs_euclidean.py
label_studio_data/: config.xml
models/: hgcn_best.pt  hgcn_embeddings.pkl
results/: real_evaluation_results.json
testcases/: test_kg.py  test_kg_display.py  test_similar_cases.py  test_system_components.py  test_visualization.py
tests/: quick_5_test.py  test_5_clean.py  test_all_implementations.py  test_chunked_embeddings.py  test_hyperbolic_model.py  test_nomic_quality.py
theory/: nash_equilibrium_formulation.py
visualizations_output/: 00_dashboard.html
(+163 files in other folders)
